# claude-swiss-army-knife

./: .env.example  .gitignore  QUICKSTART.md  README.md  compose-casaos.yaml  docker-compose.casaos.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: 01-bug-report.md  02-documentation.md  03-feature-request.md  04-question.md  05-security.md  06-config.md  config.yml
.github/workflows/: ci.yml  deploy-docs.yml
configs/templates/: github-mcp.yaml  obsidian.yaml  settings.example.json  synology-nas.yaml  ubuntu-server.yaml  users.yaml
docs-site/: Dockerfile  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs-site/docs/: intro.md
docs-site/docs/deployment/: cloudflare-tunnel.md  docker-compose.md  production.md
docs-site/docs/developer-guide/: adding-existing-mcp.md  creating-mcp-server.md  overview.md  permission-engine-api.md
docs-site/docs/getting-started/: claude-code-setup.md  installation.md  prerequisites.md
docs-site/docs/mcp-servers/: obsidian.md  overview.md  synology-nas.md  ubuntu-server.md
docs-site/docs/security/: hardening.md  model.md  permissions.md
docs-site/docs/webui/: overview.md  usage.md
docs-site/src/css/: custom.css
mcp-servers/github/: Dockerfile  pyproject.toml
mcp-servers/github/src/: server.py
mcp-servers/obsidian/: Dockerfile  config.yaml.example  pyproject.toml
mcp-servers/obsidian/src/obsidian_mcp/: __init__.py  __main__.py  config_watcher.py  discover.py  frontmatter.py  server.py  vault.py  wikilinks.py
mcp-servers/obsidian/src/obsidian_mcp/tools/: __init__.py
mcp-servers/obsidian/tests/: test_smoke.py
mcp-servers/shared/mcp-permission-engine/: pyproject.toml
mcp-servers/shared/mcp-permission-engine/src/permission_engine/: __init__.py  audit.py  config.py  enforcer.py  models.py  resolver.py  server.py  users.py
mcp-servers/shared/mcp-permission-engine/tests/: test_audit.py  test_config.py  test_enforcer.py  test_resolver.py  test_users.py
mcp-servers/shared/mcp-proxy/: pyproject.toml
mcp-servers/shared/mcp-proxy/src/mcp_proxy/: __init__.py  proxy_server.py
mcp-servers/synology-nas/: Dockerfile  config.yaml.example  pyproject.toml
mcp-servers/synology-nas/src/synology_mcp/: __init__.py  __main__.py  config_watcher.py  discover.py  dsm_client.py  server.py
mcp-servers/synology-nas/src/synology_mcp/tools/: __init__.py
mcp-servers/synology-nas/tests/: test_smoke.py
mcp-servers/ubuntu-server/: Dockerfile  config.yaml.example  pyproject.toml
mcp-servers/ubuntu-server/src/ubuntu_mcp/: __init__.py  __main__.py  config_watcher.py  discover.py  path_mapper.py  server.py
mcp-servers/ubuntu-server/src/ubuntu_mcp/tools/: __init__.py  append_file.py  docker_mgmt.py  execute.py  list_dir.py  read_file.py  (+3 more)
mcp-servers/ubuntu-server/tests/: test_smoke.py
mcp-webui/: Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json
mcp-webui/src/: instrumentation.ts  middleware.ts
mcp-webui/src/__tests__/: api.test.ts
mcp-webui/src/app/: layout.tsx  page.tsx
mcp-webui/src/app/[server]/: page.tsx
mcp-webui/src/app/agents/: page.tsx
mcp-webui/src/app/login/: page.tsx
mcp-webui/src/app/settings/: page.tsx
mcp-webui/src/components/: AccessToggles.tsx  Badge.tsx  DataTable.tsx  EmptyState.tsx  FolderTree.tsx  Modal.tsx  PageHeader.tsx  StatsCards.tsx  Toggle.tsx
mcp-webui/src/lib/: api-helpers.ts  api.ts  auth.ts  config.ts  dsm-client.ts  scan-constants.ts  scan-status.ts  scheduler.ts  servers.ts  types.ts  yaml-config.ts
mcp-webui/src/lib/provider-stats/: TESTING.md  anthropic.ts  audit-stats.ts  deepseek.ts  gemini.ts  index.ts  ollama.ts  openai.ts  openrouter.ts  types.ts
scripts/: generate-api-key.sh  health-check.sh  setup-build.sh
(+21 files in other folders)
