[project]
name = "github-mcp-proxy"
version = "1.0.0"
description = "GitHub MCP proxy — wraps @modelcontextprotocol/server-github with permission gating"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.28.1",
    "mcp-proxy",
    "mcp-permission-engine",
]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"
