[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-mcp"
version = "1.0.0"
description = "MCP server for Obsidian vault management — read/write/search notes"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "mcp>=1.0",
    "mcp-permission-engine",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "watchfiles>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
