[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synology-mcp"
version = "1.0.0"
description = "MCP server for Synology NAS management via DSM 7.x API"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "mcp>=1.0",
    "mcp-permission-engine",
    "httpx>=0.28",
    "structlog>=24.0",
    "watchfiles>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
