[project]
name = "mcp-proxy"
version = "1.0.0"
description = "Generic MCP proxy — wraps external MCP servers with permission gating"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.28.1",
    "mcp-permission-engine",
    "pyyaml>=6.0",
]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"
